added href placeholders to social media links.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 				<aside id="social-media" class="beige-bg">
 					<ul>
 						<h2>Social Media</h2>
-						<li><a>Facebook</a></li>
-						<li><a>Twitter</a></li>
-						<li><a>Instagram</a></li>
-						<li><a>LinkedIn</a></li>
+						<li><a href="#">Facebook</a></li>
+						<li><a href="#">Twitter</a></li>
+						<li><a href="#">Instagram</a></li>
+						<li><a href="#">LinkedIn</a></li>
 					</ul>
 				</aside>
 				<section id="section-five" class="gold-bg">
